--- a/index.html
+++ b/index.html
@@ -1627,7 +1627,7 @@
       </div>
       <div class="message-content">
         <div class="head-image">
-          <img src="https://i.postimg.cc/Nj1yFc9T/Screenshot-2025-02-28-105502.png" alt="Mr. Nyabako - Head Master">
+          <img src="https://i.postimg.cc/prr8wNPX/20250809-091036.jpg" alt="Mr. Nyabako - Head Master">
           <div class="quote-mark">"</div>
         </div>
         <div class="message-text">
@@ -1728,7 +1728,7 @@
         <div class="faculty-card" data-category="admin">
           <div class="admin-badge">Vice Principal</div>
           <div class="faculty-image">
-            <img src="https://i.postimg.cc/SxB9NwG9/20250129-113912.avif" alt="Vice Principal">
+            <img src="https://i.postimg.cc/prr8wNPX/20250809-091036.jpg" alt="Vice Principal">
           </div>
           <div class="faculty-info">
             <h3>Mr. Gocha</h3>
