--- a/index.html
+++ b/index.html
@@ -1778,10 +1778,10 @@
       </div>
       <div class="gallery-grid">
         <div class="gallery-item">
-          <img src="https://files.catbox.moe/x2yw1m.jpg" alt="Science Lab">
+          <img src="https://cdn.mrfrankofc.gleeze.com/alevel_stm.jpg" alt="Science Lab">
           <div class="gallery-overlay">
-            <h3>Science Labs</h3>
-            <p>Students conducting experiments in our modern science laboratories</p>
+            <h3>A level Classes</h3>
+            <p>Students in our modern classes</p>
           </div>
         </div>
         
