--- a/index.html
+++ b/index.html
@@ -1779,7 +1779,7 @@
       </div>
       <div class="gallery-grid">
         <div class="gallery-item">
-          <img src="https://cdn.mrfrankofc.gleeze.com/alevel_stm.jpg" alt="Science Lab">
+          <img src="https://dabby.vercel.app/st-block.jpg" alt="Science Lab">
           <div class="gallery-overlay">
             <h3>A level Classes</h3>
             <p>Students in our modern classes</p>
