--- a/index.html
+++ b/index.html
@@ -1779,7 +1779,7 @@
       </div>
       <div class="gallery-grid">
         <div class="gallery-item">
-          <img src="https://dar3x.vercel.app/stmarys-alevel.jpg" alt="Science Lab">
+          <img src="https://i.postimg.cc/TYf55Bk6/20251002-150824.jpg" alt="Science Lab">
           <div class="gallery-overlay">
             <h3>A level Classes</h3>
             <p>Students in our modern classes</p>
